--- a/SUBNETTING.html
+++ b/SUBNETTING.html
@@ -1092,11 +1092,11 @@
     <h4><b>Q191.    What is the broadcast address of the network 172.27.28.0 255.255.254.0?</h1><h4></b> 
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
-    Answer : Option A</details>
-    <h4><b>Q192.    What is the last valid host on the subnetwork 172.27.148.0 255.255.254.0?</h1><h4></b> Answer : 172.27.149.254
+    Answer : 172.27.29.255</details>
+    <h4><b>Q192.    What is the last valid host on the subnetwork 172.27.148.0 255.255.254.0?</h1><h4></b> 
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
-    Answer : 172.27.29.255</details>
+    Answer : 172.27.149.254</details>
     <h4><b>Q193.    What is the last valid host on the subnetwork 172.19.144.0/21?</h1><h4></b> 
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
@@ -1117,10 +1117,11 @@
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
     Answer : Option A</details>
-    <h4><b>Q198.    What valid host range is the IP address 172.24.201.10/23 a part of?</h1><h4></b> Answer : 172.24.200.1 through to 172.24.201.254
+    <h4><b>Q198.    What valid host range is the IP address 172.24.201.10/23 a part of?
+    </h4></b>
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
-    Answer : 172.31.108.113</details>
+    Answer : 172.24.200.1 through to 172.24.201.254</details>
     <h4><b>Q199.    Which subnet does host 172.31.114.5 255.255.254.0 belongs to?</h1><h4></b> 
     <details>
     <summary><a>Click here for Show answer/ Hide answer</a></summary>
